Implement Phase 4: URL Grounding & Fix Build Errors

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/node": "^5.5.15",
+    "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
